@@ -1,3 +1,11 @@
+2011-09-05  Andras Becsi  <andras.becsi@nokia.com>
+
+        [Qt][WK2] Fix the build
+
+        Rubber-stamped by Csaba Osztrogonác.
+
+        * DerivedSources.pro: Add missing PluginProcessConnection.messages.in after r94456.
+
 2011-09-02  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r94473.
